--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 						<h1>Keyur Moradiya</h1>
 						<h2>I'm a
 							<span class="txt-rotate" data-period="2000"
-								data-rotate='[ "App Developer.","Web Designer.", "Developer.", "Game Developer." ]'></span>
+								data-rotate='[ "Android Developer.","Web Designer.", "Sotware Developer.", "Game Developer." ]'></span>
 						</h2>
 					</div>
 				</div>
