--- a/index.html
+++ b/index.html
@@ -303,10 +303,10 @@
 						<div class="row progress-circle mb-5">
 							<div class="col-lg-4 mb-4">
 								<div class="bg-white rounded-lg shadow p-4">
-									<h2 class="h5 font-weight-bold text-center mb-4">CSS</h2>
+									<h2 class="h5 font-weight-bold text-center mb-4">Java</h2>
 
 									<!-- Progress bar 1 -->
-									<div class="progress mx-auto" data-value='90'>
+									<div class="progress mx-auto" data-value='100'>
 										<span class="progress-left">
 											<span class="progress-bar border-primary"></span>
 										</span>
