--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
 										</span>
 										<div
 											class="progress-value w-100 h-100 rounded-circle d-flex align-items-center justify-content-center">
-											<div class="h2 font-weight-bold">90<sup class="small">%</sup></div>
+											<div class="h2 font-weight-bold">100<sup class="small">%</sup></div>
 										</div>
 									</div>
 									<!-- END -->
@@ -337,7 +337,41 @@
 
 							<div class="col-lg-4 mb-4">
 								<div class="bg-white rounded-lg shadow p-4">
-									<h2 class="h5 font-weight-bold text-center mb-4">HTML</h2>
+									<h2 class="h5 font-weight-bold text-center mb-4">Kotlin</h2>
+
+									<!-- Progress bar 1 -->
+									<div class="progress mx-auto" data-value='85'>
+										<span class="progress-left">
+											<span class="progress-bar border-primary"></span>
+										</span>
+										<span class="progress-right">
+											<span class="progress-bar border-primary"></span>
+										</span>
+										<div
+											class="progress-value w-100 h-100 rounded-circle d-flex align-items-center justify-content-center">
+											<div class="h2 font-weight-bold">85<sup class="small">%</sup></div>
+										</div>
+									</div>
+									<!-- END -->
+
+									<!-- Demo info -->
+									<!-- <div class="row text-center mt-4">
+										<div class="col-6 border-right">
+											<div class="h4 font-weight-bold mb-0">28%</div><span
+												class="small text-gray">Last week</span>
+										</div>
+										<div class="col-6">
+											<div class="h4 font-weight-bold mb-0">60%</div><span
+												class="small text-gray">Last month</span>
+										</div>
+									</div> -->
+									<!-- END -->
+								</div>
+							</div>
+
+							<div class="col-lg-4 mb-4">
+								<div class="bg-white rounded-lg shadow p-4">
+									<h2 class="h5 font-weight-bold text-center mb-4">C#</h2>
 
 									<!-- Progress bar 1 -->
 									<div class="progress mx-auto" data-value='80'>
@@ -368,45 +402,11 @@
 									<!-- END -->
 								</div>
 							</div>
-
-							<div class="col-lg-4 mb-4">
-								<div class="bg-white rounded-lg shadow p-4">
-									<h2 class="h5 font-weight-bold text-center mb-4">jQuery</h2>
-
-									<!-- Progress bar 1 -->
-									<div class="progress mx-auto" data-value='75'>
-										<span class="progress-left">
-											<span class="progress-bar border-primary"></span>
-										</span>
-										<span class="progress-right">
-											<span class="progress-bar border-primary"></span>
-										</span>
-										<div
-											class="progress-value w-100 h-100 rounded-circle d-flex align-items-center justify-content-center">
-											<div class="h2 font-weight-bold">75<sup class="small">%</sup></div>
-										</div>
-									</div>
-									<!-- END -->
-
-									<!-- Demo info -->
-									<!-- <div class="row text-center mt-4">
-										<div class="col-6 border-right">
-											<div class="h4 font-weight-bold mb-0">28%</div><span
-												class="small text-gray">Last week</span>
-										</div>
-										<div class="col-6">
-											<div class="h4 font-weight-bold mb-0">60%</div><span
-												class="small text-gray">Last month</span>
-										</div>
-									</div> -->
-									<!-- END -->
-								</div>
-							</div>
 						</div>
 						<div class="row">
 							<div class="col-md-6 animate-box">
 								<div class="progress-wrap ftco-animate">
-									<h3>Photoshop</h3>
+									<h3>Objective - C</h3>
 									<div class="progress">
 										<div class="progress-bar color-1" role="progressbar" aria-valuenow="90"
 											aria-valuemin="0" aria-valuemax="100" style="width:90%">
@@ -417,11 +417,11 @@
 							</div>
 							<div class="col-md-6 animate-box">
 								<div class="progress-wrap ftco-animate">
-									<h3>jQuery</h3>
+									<h3>c++</h3>
 									<div class="progress">
 										<div class="progress-bar color-2" role="progressbar" aria-valuenow="85"
 											aria-valuemin="0" aria-valuemax="100" style="width:85%">
-											<span>85%</span>
+											<span>95%</span>
 										</div>
 									</div>
 								</div>
@@ -450,22 +450,22 @@
 							</div>
 							<div class="col-md-6 animate-box">
 								<div class="progress-wrap ftco-animate">
-									<h3>WordPress</h3>
+									<h3>PHP</h3>
 									<div class="progress">
 										<div class="progress-bar color-5" role="progressbar" aria-valuenow="70"
 											aria-valuemin="0" aria-valuemax="100" style="width:70%">
-											<span>70%</span>
+											<span>78%</span>
 										</div>
 									</div>
 								</div>
 							</div>
 							<div class="col-md-6 animate-box">
 								<div class="progress-wrap ftco-animate">
-									<h3>SEO</h3>
+									<h3>Swift</h3>
 									<div class="progress">
 										<div class="progress-bar color-6" role="progressbar" aria-valuenow="80"
 											aria-valuemin="0" aria-valuemax="100" style="width:80%">
-											<span>80%</span>
+											<span>60%</span>
 										</div>
 									</div>
 								</div>
