--- a/index.html
+++ b/index.html
@@ -90,16 +90,15 @@
 							<h1 class="big">About</h1>
 							<h2 class="mb-4">About Me</h2>
 							<p>
-								Innovative Android Developer with a bachelor’s in computer science and over two years of
-								hands-on experience in mobile software development.
+								Innovative Android Developer with a bachelor’s in computer science and 2+ years of experience in crafting over 26 mobile applications used by 10,00,000+ users globally. Demonstrated expertise in Java and Kotlin, delivering applications that marry sleek functionality with optimal performance. Adept at clean, maintainable code and rigorous unit testing, ensuring robust end products. My proactive problem-solving, combined with a collaborative approach, drives team efficiency and product innovation. Eager to leverage my technical proficiency and dedication to quality in a challenging environment to create cutting-edge applications that lead market trends and enhance user engagement.
 							</p>
 							<ul class="about-info mt-4 px-md-0 px-2">
 								<li class="d-flex"><span>Name:</span> <span>Keyur Moradiya</span></li>
-								<li class="d-flex"><span>Date of birth:</span> <span>November 28, 2001</span></li>
-								<li class="d-flex"><span>Address:</span> <span>San Francisco CA 97987 USA</span></li>
-								<li class="d-flex"><span>Zip code:</span> <span>1000</span></li>
-								<li class="d-flex"><span>Email:</span> <span>ronaldo@gmail.com</span></li>
-								<li class="d-flex"><span>Phone: </span> <span>+1-2234-5678-9-0</span></li>
+								<li class="d-flex"><span>Date of birth:</span> <span>March 31, 2001</span></li>
+								<li class="d-flex"><span>Address:</span> <span>55, Duke Street West, Kitchener, ON, CA</span></li>
+								<li class="d-flex"><span>Zip code:</span> <span>N2H 0C9</span></li>
+								<li class="d-flex"><span>Email:</span> <span>keyurmoradiya101@outlook.com</span></li>
+								<li class="d-flex"><span>Phone: </span> <span>+1(519) 716-3171</span></li>
 							</ul>
 						</div>
 					</div>
@@ -120,8 +119,9 @@
 	<section class="ftco-section ftco-partner">
 		<div class="container">
 			<div class="row">
+
 				<div class="col-sm ftco-animate">
-					<a href="#" class="partner"><img src="images/Unity_Technologies_logo.svg.png" class="img-fluid"
+					<a href="#" class="partner"><img src="images/kotalin.png" class="img-fluid"
 							alt="Colorlib Template"></a>
 				</div>
 				<div class="col-sm ftco-animate">
@@ -133,7 +133,33 @@
 							alt="Colorlib Template"></a>
 				</div>
 				<div class="col-sm ftco-animate">
-					<a href="#" class="partner"><img src="images/kotalin.png" class="img-fluid"
+					<a href="#" class="partner"><img src="images/Unity_Technologies_logo.svg.png" class="img-fluid"
+							alt="Colorlib Template"></a>
+				</div>
+				<div class="col-sm ftco-animate">
+					<a href="#" class="partner"><img src="images/cProgramming.png" class="img-fluid"
+							alt="Colorlib Template" style="height: 64px;"></a>
+				</div>
+			</div>
+		</div>
+	</br>
+		<div class="container">
+			<div class="row">
+
+				<div class="col-sm ftco-animate">
+					<a href="#" class="partner"><img src="images/partner-6.png" class="img-fluid"
+							alt="Colorlib Template"></a>
+				</div>
+				<div class="col-sm ftco-animate">
+					<a href="#" class="partner"><img src="images/partner-7.png" class="img-fluid"
+							alt="Colorlib Template"></a>
+				</div>
+				<div class="col-sm ftco-animate">
+					<a href="#" class="partner"><img src="images/partner-3.png" class="img-fluid"
+							alt="Colorlib Template"></a>
+				</div>
+				<div class="col-sm ftco-animate">
+					<a href="#" class="partner"><img src="images/Unity_Technologies_logo.svg.png" class="img-fluid"
 							alt="Colorlib Template"></a>
 				</div>
 				<div class="col-sm ftco-animate">
@@ -143,6 +169,7 @@
 			</div>
 		</div>
 	</section>
+	
 
 	<section class="ftco-section ftco-no-pb goto-here" id="resume-section">
 		<div class="container">
@@ -169,8 +196,7 @@
 								<h2>Mobile Solution Development</h2>
 								<span class="position">Conestoga College, Waterloo</span>
 								<p>
-									I am currently pursuing my Mobile Solution Development from Conestoga College,
-									Waterloo.
+									Completed a specialized course in Mobile Solution Development at Conestoga College
 								</p>
 							</div>
 						</div>
@@ -179,11 +205,11 @@
 								<span class="flaticon-ideas"></span>
 							</div>
 							<div class="text pl-3">
-								<span class="date">2019-2021</span>
+								<span class="date">2018-2021</span>
 								<h2>Bachelor of Computer Application</h2>
 								<span class="position">VNSGU University, Surat</span>
 								<p>
-									Currently I am pursuing my BCA from VNSGU University, Surat.
+									Holder of a Bachelor of Computer Applications (BCA) degree from VNSGU University, Surat.
 								</p>
 							</div>
 						</div>
@@ -417,7 +443,7 @@
 							</div>
 							<div class="col-md-6 animate-box">
 								<div class="progress-wrap ftco-animate">
-									<h3>c++</h3>
+									<h3>C++</h3>
 									<div class="progress">
 										<div class="progress-bar color-2" role="progressbar" aria-valuenow="85"
 											aria-valuemin="0" aria-valuemax="100" style="width:85%">
@@ -472,7 +498,7 @@
 							</div>
 							<div class="col-md-6 animate-box">
 								<div class="progress-wrap ftco-animate">
-									<h3>SEO</h3>
+									<h3>Firebase</h3>
 									<div class="progress">
 										<div class="progress-bar color-6" role="progressbar" aria-valuenow="80"
 											aria-valuemin="0" aria-valuemax="100" style="width:80%">
@@ -483,11 +509,11 @@
 							</div>
 							<div class="col-md-6 animate-box">
 								<div class="progress-wrap ftco-animate">
-									<h3>SEO</h3>
+									<h3>React Native</h3>
 									<div class="progress">
 										<div class="progress-bar color-6" role="progressbar" aria-valuenow="80"
 											aria-valuemin="0" aria-valuemax="100" style="width:80%">
-											<span>80%</span>
+											<span>55%</span>
 										</div>
 									</div>
 								</div>
@@ -733,7 +759,7 @@
 				<div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
 					<div class="block-18 shadow">
 						<div class="text">
-							<strong class="number" data-number="100">0</strong>
+							<strong class="number" data-number="1">0</strong>
 							<span>Awards</span>
 						</div>
 					</div>
@@ -741,7 +767,7 @@
 				<div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
 					<div class="block-18 shadow">
 						<div class="text">
-							<strong class="number" data-number="1200">0</strong>
+							<strong class="number" data-number="47">0</strong>
 							<span>Complete Projects</span>
 						</div>
 					</div>
@@ -749,7 +775,7 @@
 				<div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
 					<div class="block-18 shadow">
 						<div class="text">
-							<strong class="number" data-number="1200">0</strong>
+							<strong class="number" data-number="7">0</strong>
 							<span>Happy Customers</span>
 						</div>
 					</div>
@@ -862,7 +888,7 @@
 						</div>
 						<div>
 							<h3 class="mb-4">Address</h3>
-							<p>198 West 21th Street, Suite 721 New York NY 10016</p>
+							<p>55, Duke Street West, Kitchener, ON, CA, N2H 0C9</p>
 						</div>
 					</div>
 				</div>
@@ -873,7 +899,7 @@
 						</div>
 						<div>
 							<h3 class="mb-4">Contact Number</h3>
-							<p><a href="tel://1234567920">+ 1235 2355 98</a></p>
+							<p><a href="tel:5197163171">+1 (519) 716-3171</a></p>
 						</div>
 					</div>
 				</div>
@@ -884,7 +910,7 @@
 						</div>
 						<div>
 							<h3 class="mb-4">Email Address</h3>
-							<p><a href="mailto:info@yoursite.com">info@yoursite.com</a></p>
+							<p><a href="mailto:keyurmoradiya101@outlook.com">keyurmoradiya101@outlook.com</a></p>
 						</div>
 					</div>
 				</div>
@@ -895,7 +921,7 @@
 						</div>
 						<div>
 							<h3 class="mb-4">Website</h3>
-							<p><a href="#">yoursite.com</a></p>
+							<p><a href="https://keyur07.github.io/">My Website</a></p>
 						</div>
 					</div>
 				</div>
@@ -996,7 +1022,7 @@
 							href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 						<span>
 							<span class="fa fa-envelope mr-2" style="font-size: 20px; color: #fff;" ></span>
-							<a href="mailto:keyurmordiya@gmail.com" style="font-size: 18px; color: aliceblue;">keyurmoradiya@gmail.com</a>
+							<a href="mailto:keyurmordiya@gmail.com" style="font-size: 18px; color: aliceblue;">keyurmoradiya101@outlook.com</a>
 						</span>
 
 
